--- a/frontend/src/styles/reels.css
+++ b/frontend/src/styles/reels.css
@@ -27,8 +27,8 @@
 
 /* Video Box */
 .reel-box {
-  width: 360px;
-  height: 100%;
+  width: 300px;
+  height:540px;
   background: #111;
   border-radius: 16px;
   overflow: hidden;
@@ -45,9 +45,16 @@
 .right-panel {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 95%;
-  width: 240px;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  height: 540px; /* match video height */
+  width: 220px;  /* little slimmer */
+}
+
+.food-info {
+  width: 100%;
+  text-align: center;
 }
 
 /* Action Buttons */
@@ -140,12 +147,17 @@
     padding-top: 20px;
   }
 
-  .right-panel {
-    width: 90%;
-    height: auto;
-    flex-direction: row;
-    justify-content: space-around;
+@media (max-width: 768px) {
+  .reel-box {
+    width: 90vw;
+    height: 75vh;
   }
+  .right-panel {
+    width: 100%;
+    height: auto;
+  }
+}
+
 
   .action-group {
     flex-direction: row;
