--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,18 @@
 * {
-  margin: 0 ;
+  margin: 0;
   padding: 0;
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
 
 html,
-body{
-height:100%;
-width:100
+body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+/* React root */
+#root {
+  height: 100%;
+  width: 100%;
 }
